<resources>
    <string name="app_name">Krushak Bazaar</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="skip">SKIP</string>

    <string name="heading_one">Sell Your Harvest</string>
    <string name="heading_two">Fresh from Farm to Table</string>
    <string name="heading_three">Empowering Farmers</string>
    <string name="heading_four">Direct Farm Purchases</string>
    <string name="heading_five">Seamless Transactions</string>

    <string name="desc_one">With KrushakBazaar farmers can easily sell their fresh produce directly to consumers through KrushakBazaar. List your vegetables, fruits, and other products in a few simple steps, and reach a wider audience.</string>
    <string name="desc_two">Consumers can buy vegetables and fruits directly from farmers through KrushakBazaar, ensuring the freshest produce reaches their table.</string>
    <string name="desc_three">With KrushakBazaar, farmers can expand their market reach and increase their income with minimal effort.</string>
    <string name="desc_four">Connect with local farmers and buy fresh produce directly from the source with Krushak Bazaar. By purchasing through the app, you support sustainable agriculture and ensure that more of your money goes directly to the farmers.</string>
    <string name="desc_five">KrushakBazaar simplifies the process of selling and buying farm produce. Payments done between Farmer and Consumer are done securely.</string>

    <string name="index_heading1">NAMASTE</string>
    <string name="index_heading2">WELCOME USER</string>

    <string name="signup_heading0">SIGN UP</string>
    <string name="signup_heading_farmer1">Hello Farmer,</string>
    <string name="signup_heading2">Please Sign</string>
    <string name="signup_heading3">Up</string>
    <string name="signup_heading_consumer1">Hello Consumer,</string>

    <string name="signup_for_farmer">SIGN UP FOR FARMER</string>
    <string name="signup_for_consumer">SIGN UP FOR CONSUMER</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_phone_number">Enter your phone number</string>

    <string name="login_heading0">LOGIN</string>
    <string name="login_for_government_official">LOGIN FOR GOVERNMENT OFFICIAL</string>
    <string name="login_for_farmer">LOGIN FOR FARMER</string>
    <string name="login_for_consumer">LOGIN FOR CONSUMER</string>
    <string name="enter_your_address">Enter your address</string>

    <string name="login_govt_heading0_govtofficial">Hello Officer,</string>
    <string name="login_govt_heading1_govtofficial">Please Login</string>

    <string name="login_heading1_farmers">Hello Farmer,</string>
    <string name="login_heading2_farmers">Please Login</string>

    <string name="login_heading1_consumers">Hello Consumer,</string>
    <string name="login_heading2_consumers">Please Login</string>

    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_otp_sent_to">Please enter the OTP sent to</string>
    <string name="verify">Verify</string>
    <string name="mobile_number_text">+91 9999999999</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_listed_product_found">No Listed Product Found</string>


</resources>