<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#D6EFD8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexPage">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loginAnimationView_indexpage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        app:lottie_rawRes="@raw/farmer"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/indexPage_heading1_textview"
        android:text="@string/index_heading1"
        android:fontFamily="@font/nerkoone_regular"
        android:textSize="@dimen/_30sdp"
        android:textColor="#222831"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginAnimationView_indexpage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="@dimen/_10sdp" />

    <TextView
        android:id="@+id/indexPage_heading2_textview"
        android:text="@string/index_heading2"
        android:fontFamily="@font/nerkoone_regular"
        android:textColor="#393E46"
        android:textSize="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/indexPage_heading1_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="@dimen/_5sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

    <Button
        android:id="@+id/signup_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/signup"
        android:background="@drawable/rounded_button"
        android:textColor="#EEEEEE"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/indexPage_heading2_textview"
        app:layout_constraintEnd_toStartOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/login_button"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="#EEEEEE"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/indexPage_heading2_textview"
        app:layout_constraintStart_toEndOf="@+id/signup_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
