<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".SignupPageForFarmers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/signuppage_topbackground"
                android:src="@drawable/top_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:id="@+id/back_button_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <Button
                    android:id="@+id/back_button_signuppage_for_farmers"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/ic_arrow_back_black"
                    android:tint="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/signuppage_top_heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/back_button_container"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/signup_heading_farmer1"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/signuppage_top_heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signuppage_top_heading1"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/signup_heading2"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_17sdp"/>

            <TextView
                android:id="@+id/signuppage_top_heading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signuppage_top_heading2"
                android:layout_marginStart="@dimen/_30sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/signup_heading3"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_17sdp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/signuppage_profilephoto_farmer"
                android:src="@drawable/person_icon_second"
                app:shapeAppearanceOverlay="@style/circular"
                app:strokeColor="@color/black"
                app:strokeWidth="3dp"
                android:padding="5dp"
                android:background="#68ED6E"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/profilephoto_farmer_add_button"
                android:src="@drawable/baseline_photo_camera_24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp" />

            <TextView
                android:id="@+id/username_textview"
                android:text="Username"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_below="@+id/signuppage_profilephoto_farmer"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/username_edittext_for_farmers"
                android:hint="@string/enter_your_username"
                android:inputType="textPersonName"
                android:fontFamily="@font/poppins_light"
                android:maxLength="18"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/username_textview"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:drawableStart="@drawable/person_icon"
                android:drawablePadding="@dimen/_9sdp"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/email_textview"
                android:text="Email"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_below="@+id/username_edittext_for_farmers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/email_edittext_for_farmers"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_light"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/email_textview"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:drawableStart="@drawable/ic_email_selector"
                android:drawablePadding="@dimen/_9sdp"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/password_textview"
                android:text="Password"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_below="@+id/email_edittext_for_farmers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/password_edittext_for_farmers"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_light"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/password_textview"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:drawableStart="@drawable/lock_icon"
                android:drawableEnd="@drawable/password_hide"
                android:drawablePadding="@dimen/_9sdp"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/phonenumber_textview"
                android:text="Phone Number"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_below="@+id/password_edittext_for_farmers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/phonenumber_edittext_for_farmers"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:fontFamily="@font/poppins_light"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/phonenumber_textview"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:drawableStart="@drawable/mobile_no_icon"
                android:drawablePadding="@dimen/_9sdp"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/address_textview"
                android:text="Address"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_below="@+id/phonenumber_edittext_for_farmers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/address_edittext_for_farmers"
                android:hint="@string/enter_your_address"
                android:inputType="textPostalAddress"
                android:fontFamily="@font/poppins_light"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/address_textview"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:drawableStart="@drawable/ic_location_selector"
                android:drawablePadding="@dimen/_9sdp"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/signup_button_signuppage_for_farmers"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/signup"
                android:background="@drawable/rounded_button"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_edittext_for_farmers"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_65sdp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>