<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".LoginPageForGovtOfficial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/loginppage_topbackground"
                android:src="@drawable/top_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:id="@+id/backbutton_loginpage_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <Button
                    android:id="@+id/back_button_loginpage_govtofficial"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/ic_arrow_back_black"
                    android:tint="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/loginpage_top_heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/backbutton_loginpage_container"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/login_govt_heading0_govtofficial"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/loginpage_top_heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginpage_top_heading1"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/login_govt_heading1_govtofficial"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_20sdp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email_textview"
                android:text="Email"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/loginemail_edittext_for_govtofficial"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_light"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/email_textview"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:drawableStart="@drawable/ic_email_selector"
                android:drawablePadding="@dimen/_9sdp"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/password_textview"
                android:text="Password"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_below="@+id/loginemail_edittext_for_govtofficial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/loginpassword_edittext_for_govtofficial"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_light"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/password_textview"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_1"
                android:drawableStart="@drawable/lock_icon"
                android:drawableEnd="@drawable/password_hide"
                android:drawablePadding="@dimen/_9sdp"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/login_button_loginpage_govtofficial"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:background="@drawable/rounded_button"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginpassword_edittext_for_govtofficial"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_65sdp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>